@@ -220,10 +220,7 @@ be_visitor_executor_exs::visit_provides (be_provides *node)
       << "ACE_NEW_RETURN (" << be_idt_nl
       << "tmp," << be_nl
       << lname << "_exec_i (" << be_idt_nl
-      << smart_scope << c_scope->full_name () << "::CCM_"
-      << this->node_->local_name () << "_Context::_duplicate ("
-      << be_idt_nl
-      << "this->ciao_context_.in ()))," << be_uidt << be_uidt_nl
+      << "this->ciao_context_.in ())," << be_uidt_nl
       << global << sname << "::CCM_" << lname << "::_nil ());"
       << be_uidt_nl << be_nl
       << "this->ciao_" << port_name << "_ = tmp;" << be_uidt_nl
