@@ -91,7 +91,11 @@ be_visitor_facet_exs::visit_provides (be_provides *node)
       << smart_scope << c_scope->full_name () << "::CCM_"
       << this->node_->local_name () << "_Context_ptr ctx)"
       << be_uidt << be_uidt_nl
-      << ": ciao_context_ (ctx)" << be_uidt_nl
+      << ": ciao_context_ (" << be_idt << be_idt_nl
+      << smart_scope << c_scope->full_name ()
+      << "::CCM_" << this->node_->local_name ()
+      << "_Context::_duplicate (ctx))"
+      << be_uidt << be_uidt << be_uidt_nl
       << "{" << be_nl
       << "}";
 
